--- a/LeaveSystem/leavesystem/templates/base.html
+++ b/LeaveSystem/leavesystem/templates/base.html
@@ -10,18 +10,23 @@
 
 <body>
     <nav class="navbar navbar-light bg-faded">
-        <a class="navbar-brand" href="#">
         {% if request.user.is_authenticated %}
+        <a class="navbar-brand" href="#">
             Welcome {{ request.user.username }}
-        {% else %}
-            over session
-        {% endif %}
         </a>
+        <a class="navbar-brand" href="#">
+            <form action="/logout/">
+                <button class="btn btn-primary" type="submit">
+                    Sign out
+                </button>
+            </form>
+        </a>
+        {% endif %}
+
     </nav>
     <div class="container-fluid">
         <div class="row">
-            {% block leftMenu %} {% endblock %} 
-            {% block content %} {% endblock %}
+            {% block leftMenu %} {% endblock %} {% block content %} {% endblock %}
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
